# umugu

./: .gitignore  CMakeLists.txt  LICENSE  README.md
umg-editor/: CMakeLists.txt
umg-editor/src/: PipelineBuilder.cpp  PipelineBuilder.h  main.cpp  umugu_editor.cpp  umugu_editor.h
umg-plugs/: CMakeLists.txt  inspector.cpp
umugu/: .clang-format  CMakeLists.txt
umugu-maker/: CMakeLists.txt
umugu-maker/src/: Main.cpp  PipelineBuilder.cpp  PipelineBuilder.h  PipelineInspector.cpp  PipelineInspector.h  UmuguMaker.cpp  UmuguMaker.h  Utilities.cpp  Utilities.h
umugu-plugs/: .clang-format  CMakeLists.txt  acid.cpp  inspector.cpp  soundfont.c
umugu/include/umugu/: umugu.h  umugu_internal.h  umugu_midi.h
umugu/include/umugu/backends/: umugu_portaudio19.h  umugu_portmidi.h  umugu_stdout.h
umugu/src/: audio_playback.c  builtin_nodes.h  controller.c  controller.h  debugu.c  debugu.h  main.c  midi.c  mkbin.c  umugu.c  umugu_internal.h  umugu_midi.c  umugu_nodes.c  umugu_portaudio.c  umugu_serialization.c  umutils.c  umutils.h  waveform.c
umugu/src/backends/: portaudio_impl.h  stdout_impl.h
umugu/src/nodes/: amplitude.c  builtin_nodes.h  butterworth.c  control_midi.c  limiter.c  mixer.c  oscilloscope.c  oscilloscope_lut.c  output.c  peakeq_filter.c  piano.c  tube_amp.c  wav_player.c  waveform.c
umugu/test/: main.c  test.c  umugutest_midi.c  umugutest_portaudio.c  umugutest_stdout.c
